--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
+    "maska": "^2.1.7",
     "vue": "^3.2.13",
     "vue-material-design-icons": "^5.2.0",
     "vue-pwa-asset-generator": "^1.7.3",
