add trip on user site

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -9,5 +9,11 @@ migrateup:
 migratedown:
 	migrate -path db/migration -database "postgresql://root:secret@localhost:5432/uber_replica?sslmode=disable" -verbose down
 
+migrateup1:
+	migrate -path db/migration -database "postgresql://root:secret@localhost:5432/uber_replica?sslmode=disable" -verbose up 1
+
+migratedown1:
+	migrate -path db/migration -database "postgresql://root:secret@localhost:5432/uber_replica?sslmode=disable" -verbose down 1
+
 test_osrm:
 	curl "http://localhost:8282/route/v1/driving/108.2126533032648,16.060370207645025;108.23284753838242,16.061554708431885"
