--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,17 @@
     "icons": "vue-asset-generate -a public/img/logo/Uber.png -o public/img/icons/ -b '#000000'"
   },
   "dependencies": {
+    "@vueform/toggle": "^2.1.4",
     "autoprefixer": "^10",
     "axios": "^1.6.5",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
+    "maska": "^2.1.7",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "postcss": "^8",
     "register-service-worker": "^1.7.2",
     "tailwindcss": "^3",
-    "maska": "^2.1.7",
     "vue": "^3.2.13",
     "vue-material-design-icons": "^5.2.0",
     "vue-pwa-asset-generator": "^1.7.3",
