--- a/bizops/package.json
+++ b/bizops/package.json
@@ -22,7 +22,9 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-notifications": "^1.7.4",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
